# gramine-demo

./: Dockerfile  Dockerfile.env-printer  Dockerfile.server  config.yaml  docker-compose.yml  entrypoint.sh  generic.manifest  pyproject.toml  requirements.txt  test_run_container.py
flask_server/: Dockerfile  app.py  requirements.txt
gramine_sgx_poc/: docker-compose.yml  print_env.py
proof-node/: Dockerfile  __main__.py  client.py  entrypoint.sh  pyproject.toml  test_spunup.py
proof-node/proof_node/: __main__.py  client.py  flask_server.py
proof-tasks/analytics/: Dockerfile  python.manifest.template  validate.py
proof-tasks/doordash/: Dockerfile  python.manifest.template  validate.py
test-env-echo/: Dockerfile
test_image/: Dockerfile  print_env.py
