[tool.poetry]
name = "proof-node"
version = "0.1.0"
description = "Node for securely running proof tasks in Gramine-SGX"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.12.*"
flask = "^3.0.0"
docker = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"